refactor: better function name and variable name