@@ -171,18 +171,18 @@ class MonthTable extends JTable {
     Class<JViewport> clz = JViewport.class;
     Optional.ofNullable(SwingUtilities.getAncestorOfClass(clz, this))
         .filter(clz::isInstance).map(clz::cast)
-        .ifPresent(this::updateRowsHeight);
+        .ifPresent(this::adjustRowHeights);
   }
 
-  private void updateRowsHeight(JViewport viewport) {
+  private void adjustRowHeights(JViewport viewport) {
     int height = viewport.getExtentSize().height;
     int rowCount = getModel().getRowCount();
-    int defaultRowHeight = height / rowCount;
+    int baseRowHeight = height / rowCount;
     int remainder = height % rowCount;
     for (int i = 0; i < rowCount; i++) {
-      int a = defaultRowHeight + Math.min(Math.max(remainder, 0), 1);
-      // Java 21: int a = defaultRowHeight + Math.clamp(remainder, 0, 1);
-      setRowHeight(i, Math.max(1, a));
+      int adjustedHeight = baseRowHeight + Math.min(Math.max(remainder, 0), 1);
+      // Java 21: int adjustedHeight = baseRowHeight + Math.clamp(remainder, 0, 1);
+      setRowHeight(i, Math.max(1, adjustedHeight));
       remainder -= 1;
     }
   }
