@@ -211,8 +211,6 @@ class DateEditor extends AbstractCellEditor implements TableCellEditor, ActionLi
 
   private static final class MonthTable extends JTable {
     private transient HighlightListener highlighter;
-    private int prevHeight = -1;
-    private int prevCount = -1;
 
     @Override public void updateUI() {
       removeMouseListener(highlighter);
@@ -230,24 +228,20 @@ class DateEditor extends AbstractCellEditor implements TableCellEditor, ActionLi
       Optional.ofNullable(SwingUtilities.getAncestorOfClass(clz, this))
           .filter(clz::isInstance)
           .map(clz::cast)
-          .ifPresent(this::updateRowsHeight);
+          .ifPresent(this::adjustRowHeights);
     }
 
-    private void updateRowsHeight(JViewport viewport) {
+    private void adjustRowHeights(JViewport viewport) {
       int height = viewport.getExtentSize().height;
       int rowCount = getModel().getRowCount();
-      int rowHeight = height / rowCount;
-      if ((height != prevHeight || rowCount != prevCount) && rowHeight > 0) {
-        int remainder = height % rowCount;
-        for (int i = 0; i < rowCount; i++) {
-          int a = rowHeight + Math.min(Math.max(remainder, 0), 1);
-          // Java 21: int a = rowHeight + Math.clamp(remainder, 0, 1);
-          setRowHeight(i, Math.max(1, a));
-          remainder -= 1;
-        }
+      int baseRowHeight = height / rowCount;
+      int remainder = height % rowCount;
+      for (int i = 0; i < rowCount; i++) {
+        int adjustedHeight = baseRowHeight + Math.min(Math.max(remainder, 0), 1);
+        // Java 21: int adjustedHeight = baseRowHeight + Math.clamp(remainder, 0, 1);
+        setRowHeight(i, Math.max(1, adjustedHeight));
+        remainder -= 1;
       }
-      prevHeight = height;
-      prevCount = rowCount;
     }
   }
 
