@@ -161,15 +161,15 @@ public final class MainPanel extends JPanel {
 }
 
 class CalendarTable extends JTable {
-  private void updateRowsHeight(JViewport viewport) {
+  private void adjustRowHeights(JViewport viewport) {
     int height = viewport.getExtentSize().height;
     int rowCount = getModel().getRowCount();
-    int rowHeight = height / rowCount;
+    int baseRowHeight = height / rowCount;
     int remainder = height % rowCount;
     for (int i = 0; i < rowCount; i++) {
-      int a = rowHeight + Math.min(Math.max(0, remainder), 1);
-      // Java 21: int a = rowHeight + Math.clamp(remainder, 0, 1);
-      setRowHeight(i, Math.max(1, a));
+      int adjustedHeight = baseRowHeight + Math.min(Math.max(0, remainder), 1);
+      // Java 21: int adjustedHeight = baseRowHeight + Math.clamp(remainder, 0, 1);
+      setRowHeight(i, Math.max(1, adjustedHeight));
       remainder -= 1;
     }
   }
@@ -179,7 +179,7 @@ class CalendarTable extends JTable {
     Class<JViewport> clz = JViewport.class;
     Optional.ofNullable(SwingUtilities.getAncestorOfClass(clz, this))
         .filter(clz::isInstance).map(clz::cast)
-        .ifPresent(this::updateRowsHeight);
+        .ifPresent(this::adjustRowHeights);
   }
 }
 
